made minor adjustments and made media queries for contact.html to fix some issues on mobile

--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -1,6 +1,7 @@
 body {
   justify-content: space-around;
   align-items: center;
+  font-family: "Roboto", "Open Sans", sans-serif;
 }
 
 .name {
@@ -36,12 +37,14 @@ body {
   border-bottom: 3px solid slateblue;
   transform: translate(-100%);
 }
-.name input:focus + .label-name .content-name, .name input:valid + .label-name .content-name {
+.name input:focus + .label-name .content-name,
+.name input:valid + .label-name .content-name {
   transform: translateY(-150%);
   font-size: 14px;
   color: slateblue;
 }
-.name input:focus + .label-name::after, .name input:valid + .label-name::after {
+.name input:focus + .label-name::after,
+.name input:valid + .label-name::after {
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
@@ -86,12 +89,14 @@ body {
   border-bottom: 3px solid slateblue;
   transform: translate(-100%);
 }
-.email input:focus + .label-name .content-name, .email input:valid + .label-name .content-name {
+.email input:focus + .label-name .content-name,
+.email input:valid + .label-name .content-name {
   transform: translateY(-150%);
   font-size: 14px;
   color: slateblue;
 }
-.email input:focus + .label-name::after, .email input:valid + .label-name::after {
+.email input:focus + .label-name::after,
+.email input:valid + .label-name::after {
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
@@ -136,12 +141,14 @@ body {
   border-bottom: 3px solid slateblue;
   transform: translate(-100%);
 }
-.company input:focus + .label-name .content-name, .company input:valid + .label-name .content-name {
+.company input:focus + .label-name .content-name,
+.company input:valid + .label-name .content-name {
   transform: translateY(-150%);
   font-size: 14px;
   color: slateblue;
 }
-.company input:focus + .label-name::after, .company input:valid + .label-name::after {
+.company input:focus + .label-name::after,
+.company input:valid + .label-name::after {
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
@@ -186,12 +193,14 @@ body {
   border-bottom: 3px solid slateblue;
   transform: translate(-100%);
 }
-.role input:focus + .label-name .content-name, .role input:valid + .label-name .content-name {
+.role input:focus + .label-name .content-name,
+.role input:valid + .label-name .content-name {
   transform: translateY(-150%);
   font-size: 14px;
   color: slateblue;
 }
-.role input:focus + .label-name::after, .role input:valid + .label-name::after {
+.role input:focus + .label-name::after,
+.role input:valid + .label-name::after {
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
@@ -236,12 +245,14 @@ body {
   border-bottom: 3px solid slateblue;
   transform: translate(-100%);
 }
-.message input:focus + .label-name .content-name, .message input:valid + .label-name .content-name {
+.message input:focus + .label-name .content-name,
+.message input:valid + .label-name .content-name {
   transform: translateY(-150%);
   font-size: 14px;
   color: slateblue;
 }
-.message input:focus + .label-name::after, .message input:valid + .label-name::after {
+.message input:focus + .label-name::after,
+.message input:valid + .label-name::after {
   transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
@@ -283,6 +294,40 @@ a {
 a:hover {
   cursor: pointer;
   color: whitesmoke;
+}
+
+.navbar-nav a:hover {
+  color: slateblue !important;
+}
+
+.disabled {
+  cursor: default !important;
+}
+
+@media only screen and (max-width: 700px) {
+  #submit {
+    position: relative;
+    left: 10rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #footer {
+    top: 29rem;
+  }
+
+  #submit {
+    top: 14rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  #footer {
+    top: 49.6rem;
+  }
+
+  #submit {
+    top: 25rem;
+    left: 28rem;
+  }
 }
 
 /*# sourceMappingURL=Contact.css.map */
